style.css
body {
    width: 100%;
    margin: 0;
    overflow-x: hidden;
}

#messages {
    width: 100%;
    text-align: center;
    font-size: 1.7em;
    font-family: 'Corbel', 'Trebuchet MS', Arial, sans-serif;
    margin-top: 0.5em;
}

#game {
    position: relative;
    left: 0;
}
#game.transition {
    transition: left 1000ms ease-in-out;
    left: -100%;
    width: 200%;
}
#game * {
    box-sizing: content-box;
}

.level {
    display: inline-flex;
    width: 100%;
    justify-content: center;
    flex-wrap: wrap;
}
#game.transition .level {
    width: 50%
}


.bottle {
    width: 3em;
    height: 20em;
    padding-top: 1em;
    margin: 1em;
    margin-top: 3em;
    transition: margin 300ms, padding 500ms, border 500ms;
    border: 0.25em solid black;
    border-top: 0;
    border-radius: 0 0 1.75em 1.75em;

    display: inline-flex;
    flex-direction: column-reverse;
    vertical-align: text-bottom;
}
.bottle::after {
    content: "";
    height: 0;
    width: 3em;
    background-image: url("assets/mystical-unicorn.png");
    background-repeat: no-repeat;
    background-size: 3em 2.16em;
    transition: top 500ms, height 500ms;
    position: absolute;
    top: 3em;
}

.capped {
    padding-top: 0;
    border-top: 1em solid black;
}
.capped::after {
    top: 0.84em;
    height: 2.16em;
}

.selected-bottle {
    margin-top: 1em;
    margin-bottom: 2em;
}

.water {
    width: 3em;
}

.water:first-of-type {
    border-radius: 0 0 1.75em 1.75em;
}

#toolbar {
    height: 2.5em;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1000;
}
#toolbar > div {    
    display: inline-block;
    cursor: pointer;
    font-size: 2.5em;
    height: 1.5em;
    width: 1.5em;
    padding: 0;
    text-align: center;
}
.inactive {
    color: #999;
}

